--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -1,7 +1,7 @@
 .hero-container {
   width: 100vw;
-  height: 100vh;
-  background-image: url(../images/hero.jpeg);
+  height: 65vh;
+  background-image: url(../images/hero.jpg);
   background-position: center;
   background-size: cover;
 }
