--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -8,10 +8,13 @@
   align-items: center;
   margin-top: 0;
   padding: 0 20px;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
 .header-background {
-  background-color: rgb(36, 27, 18, 0.8);
+  background-color: var(--color-background-dark);
 }
 
 .header-title {
